--- a/part7/bloglist/frontend-redux/package.json
+++ b/part7/bloglist/frontend-redux/package.json
@@ -7,12 +7,7 @@
     "dev": "vite --host",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "test": "jest",
-    "cypress:open": "cypress open"
-  },
-  "jest": {
-    "testEnvironment": "jsdom"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.1",
@@ -34,14 +29,10 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
-    "cypress": "^13.6.4",
     "eslint": "^8.45.0",
-    "eslint-plugin-cypress": "^2.15.1",
-    "eslint-plugin-jest": "^27.6.3",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "vite": "^4.4.5"
   }
