--- a/part9/bmi/package.json
+++ b/part9/bmi/package.json
@@ -6,11 +6,18 @@
   "scripts": {
     "ts-node": "ts-node",
     "bmi": "ts-node bmiCalculator.ts",
-    "calculateExercises": "ts-node exerciseCalculator.ts"
+    "calculateExercises": "ts-node exerciseCalculator.ts",
+    "start": "ts-node index.ts",
+    "dev": "ts-node-dev index.ts"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^20.11.25"
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.11.25",
+    "ts-node-dev": "^2.0.0"
+  },
+  "dependencies": {
+    "express": "^4.18.3"
   }
 }
