--- a/part9/patientor/backend/package.json
+++ b/part9/patientor/backend/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
@@ -19,6 +20,7 @@
     "typescript": "^5.4.2"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.3"
   }
 }
